--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ body {
         rgba(0, 0, 0, 0.2) 20%,
         rgba(20, 20, 20, 0.2) 80%
         rgba(20, 20, 20, 1) 100%
-    ),
-    url(./images/banner.jpg);
+    );
+    background: url(./images/banner.jpg);
     background-size: cover;
     padding: 0.26rem 0.75rem 0 0.75rem;
+    cursor: pointer;
 }
 
 .hero {
@@ -89,12 +90,16 @@ body {
 }
 
 .banner {
-    height: 80%;
+    height: 118%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50%;
     z-index: 10;
+}
+
+.subtitle {
+    width: 500px;
 }
 
 .banner .poster {
@@ -137,6 +142,8 @@ body {
 
 .category {
     height: 200px;
+    margin-top: 180px;
+    margin-bottom: -150px;
 }
 
 .category span {
@@ -166,6 +173,7 @@ body {
     margin: 100px auto 0;
     width: 80%;
     color: #808080;
+    margin-top: 180px;
 }
 
 .footer .social i {
@@ -180,6 +188,7 @@ body {
 
 .footer .info {
     width: 25%;
+
 }
 
 .footer .info ul {
@@ -190,4 +199,12 @@ body {
 
 .footer .info ul li {
     margin-top: 8px;
+}
+
+.movie img{
+    margin-left: 50px;
+    width: 240px;
+    height: 130px;
+    border-radius: 10px;
+    cursor: pointer;
 }
